[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
snick = "^1.3.0"
loguru = "^0.7.2"
py-buzz = "^4.1.0"
typer = "^0.12.5"
pydantic = "^2.9.2"
docker = "^7.1.0"
friendlywords = "^1.1.3"
boto3 = "^1.35.34"

[tool.poetry.scripts]
sandbox = "sandbox.main:app"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
